# peptide_prediction

./: .gitignore  .upptimerc.yml  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  USERNAME_CHANGE.md  index.html  mkdocs.yml  pvl_milestones.md  sitemap.xml
.claude/: settings.json
.claude/hooks/: stop-test-gate.sh
.cursor/rules/: ui-visual.mdc
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  docker-publish.yml  docs.yml  gitleaks.yml  publish-pypi.yml  release.yml  uptime.yml
_status/: index.html
agents/00_read_me_first/: index.html
agents/01_repo_map/: index.html
agents/02_contracts_and_invariants/: index.html
agents/03_doing_a_safe_change/: index.html
agents/04_when_to_ask_humans/: index.html
agents/05_existing_tooling/: index.html
agents/06_failure_modes/: index.html
agents/07_artifacts_index/: index.html
backend/: _perf_init.py  auxiliary.py  biochem_calculation.py  config.py  requirements.txt
backend/api/: main.py
backend/api/routes/: cohorts.py  health.py  peptides.py  precomputed.py  predict.py  upload.py
backend/schemas/: peptides.py
backend/scripts/: diagnose_tango.py  precompute_dataset.py  reindex_lance.py  rerun_validation_2026_06_07.py
backend/services/: cohort_stats.py  dataframe_utils.py  export.py  peptide_compare.py  peptide_rank.py  predict_service.py  upload_service.py  vector_store.py
backend/tests/: test_4category_classification.py  test_api_contracts.py  test_axiom_invariants.py  test_canary_peptides.py  test_cohort_stats.py  test_export.py  test_helix_percentage_canonical.py  test_peptide_compare_service.py  test_peptide_rank_service.py  test_peptide_routes_i.py  test_predict_stream.py  test_similar_route.py  test_vector_store.py
data/validation/: peleg-118_cohort_2026_06_07_dryrun.json
docker/: Caddyfile  docker-compose.base.yml  docker-compose.ghcr.yml  nginx.conf
docs/active/: A4_BIO_TOOLS_SUBMISSION.md  A5_ZENODO_RELEASE.md  ALEX_ONBOARDING.md  API_STABILITY.md  BACKLOG.md  CONSOLIDATED_FINAL_DEPLOY.md  CONTRACTS.md  COVERAGE_AUDIT.md  COWORK_PROMPTS.md  COWORK_V10_DESIGN_QUEUE.md  DATA_GOVERNANCE.md  DECISIONS.md  DEPLOYMENT.md  DOCS_MAP_FOR_ALEX.md  ECOSYSTEM_GUIDE.md  FINAL_REPORT_2026_06_29.md  FUTURE_TECH_SUGGESTIONS.md  GITHUB_101_FOR_ALEX.md  GITLAB_MIRROR.md  HANDOFF.md  HANDOVER_CHECKLIST.md  INCIDENT_SEVERITY.md  INVENTORY_EVERYTHING.md  KNOWN_ISSUES.md  MASTER_PUSH_PLAN.md  MCP_CLIENT_GUIDES.md  MCP_RUNBOOK.md  MOL3D_OVERLAY_SPEC.md  MONTHLY_REPORT_TEMPLATE.md  ONCALL.md  OPERATOR_COOKBOOK.md  OWNERSHIP_MATRIX.md  PAPER_METHODS_REFERENCE.md  PELEG_FEEDBACK_INSTRUCTIONS.md  PELEG_FEEDBACK_R2.md  PELEG_FOLLOWUP_PACKET_2_FULL_UPDATE.md  PELEG_FOLLOWUP_TECHNICAL_PACKET.md  PRODUCTION_LOCKDOWN.md  PUBLICATION_PATH.md  RFC_TEMPLATE.md  (+10 more)
docs/active/RESEARCH_BRIEFS/: RB-001_researcher-needs.md  RB-005_workflow-and-ai-platform-deep.md  RB-COWORK-AUDIT.md  RB-VALIDATION-V0-1.md  _INDEX.md  _TEMPLATE.md
docs/active/RESPONSES/: peleg_2026_05_18_response.md
docs/active/RUNBOOKS/: README.md  TEMPLATE.md  desy_vm_ssh_lost.md  s4pred_oom_or_missing_weights.md  sentry_quota_exhausted.md  tango_subprocess_failure.md  vps_disk_full.md
docs/active/paper_drafts/: 01_materials_and_methods.md  02_server_usage.md  03_author_contributions.md  04_data_availability.md  05_tool_name_and_graphical_abstract.md  (+10 more)
docs/handbook/: README.md  _status.md
docs/internal/: COWORK_FOLLOWUP_PROMPT.md  EMAIL_ALEX_WAVE_2_8_CLOSEOUT.md  EMAIL_PELEG_FINAL.md  EMAIL_PELEG_WAVE_2_8_CLOSEOUT.md  GITOPS_TERMINAL_PROMPT_2026_06_07.md  OPUS_DOCS_TERMINAL_PROMPT.md  OPUS_HANDBOOK_WAVE_PROMPTS.md  PERF_PROFILE_2026_06_18.md  PR_BODY_WAVE_2_8.md  WAVE_2_8_VERIFY_LIVE.md
humans/00_what_is_pvl/: index.html
humans/01_first_run/: index.html
humans/02_the_science/: index.html
humans/03_the_pipeline/: index.html
humans/04_the_ui_walkthrough/: index.html
humans/05_use_cases/: index.html
humans/06_deploying/: index.html
humans/07_extending/: index.html
humans/08_troubleshooting/: index.html
humans/09_glossary/: index.html
humans/10_credits_and_license/: index.html
mcp_server/: README.md  pyproject.toml
mcp_server/pvl_mcp/: tools.py
mcp_server/tests/: test_tools.py
paper/: paper.bib  paper.md
pvl-cli/: README.md  pyproject.toml
pvl-cli/pvl/: __init__.py  cli.py
pvl-cli/tests/: test_cli_smoke.py  test_smoke.py
pvl-py/: README.md  pyproject.toml
pvl-py/notebooks/: quickstart.ipynb
pvl-py/pvl/: __init__.py  _client.py  _io.py
pvl-py/tests/: test_smoke.py
research/01_landscape/: index.html
research/02_validation_evidence/: index.html
research/03_open_questions/: index.html
research/04_publication_path/: index.html
scripts/: desy_perf_redeploy.sh  desy_vm_bootstrap.sh  open_peleg_issues.sh  publish_v0_3_0.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/_status/: index.html
site/search/: search_index.json
ui/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.sandbox.config.ts  vitest.setup.ts
ui/src/: App.tsx  index.css  main.tsx
(+190 files in other folders)
