[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvl-cli"
version = "0.1.0"
description = "Command-line client for the Peptide Visual Lab (PVL) prediction API — TANGO + S4PRED + FF-Helix classification from any terminal."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Said Azaizah", email = "said.azaizah@cssb-hamburg.de" }]
keywords = ["peptide", "bioinformatics", "aggregation", "secondary-structure", "tango", "s4pred", "amyloid", "fibril", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Environment :: Console",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.10",
]

[project.scripts]
pvl = "pvl.cli:main"

[project.urls]
Homepage = "https://github.com/az-said/peptide_prediction"
Documentation = "https://az-said.github.io/peptide_prediction/"
Source = "https://github.com/az-said/peptide_prediction/tree/main/pvl-cli"
Issues = "https://github.com/az-said/peptide_prediction/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pvl*"]
namespaces = false
