[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvl-py"
version = "0.1.0"
description = "Python SDK for the Peptide Visual Lab (PVL) prediction API — analyze peptides via REST in Jupyter notebooks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Said Azaizah", email = "az.said2007@gmail.com" }]
keywords = ["peptide", "bioinformatics", "amyloid", "fibril", "tango", "s4pred", "pvl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    # Pinned to the same major lines as the backend so the published SDK
    # never lands a numpy/pandas surprise on a researcher's notebook.
    "pandas>=2.3,<3.0",
    "httpx>=0.28.1,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/saidazaizah/peptide_prediction"
Documentation = "https://github.com/saidazaizah/peptide_prediction/blob/main/pvl-py/README.md"
Issues = "https://github.com/saidazaizah/peptide_prediction/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pvl*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
pvl = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# Match the project-wide convention from backend/CLAUDE.md — keep
# Optional[T] / Dict[str, Any] rather than X | None / dict[str, Any].
ignore = ["E501", "UP006", "UP007", "UP035", "UP045"]
